--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -21,6 +21,7 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
 
 $formId = 'user_forgotpassword';
 
+$successMessage = $block->getSuccessMessage();
 $errorMessage = $block->getErrorMessage();
 
 // Do not replace this with $viewModels->require(ReCaptcha::class); that might break the dependency
@@ -28,62 +29,77 @@ $errorMessage = $block->getErrorMessage();
 $recaptcha = $block->getData('viewModelRecaptcha');
 ?>
 
-<div class="container mx-auto flex h-full md:items-center px-5 items-center" x-data="Authentication">
-    <div class="mx-auto mb-16 w-[412px] max-w-full">
-        <div class="flex items-center w-full justify-center" aria-labelledby="block-customer-login-heading">
-            <form action="<?= $escaper->escapeUrl($block->getUrl('*/*/forgotpasswordpost')) ?>"
-                  method="post"
-                  class="w-full"
-                  id="<?= $escaper->escapeHtmlAttr($formId) ?>"
-                  @submit.prevent="submitAuthForm('<?= $escaper->escapeJs($formId) ?>');">
-                <?= $block->getBlockHtml('formkey') ?>
-                <input type="hidden" name="formId" value="<?= $escaper->escapeHtmlAttr($formId) ?>"/>
-                <?= $block->getChildHtml('form_fields_before') ?>
-                <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
-                <fieldset class="fieldset">
-                    <div class="text-center">
-                        <h2 class="text-left md:text-center mb-3 font-lg md:font-bold w-full text-xxl md:mb-4"><?= __('Reset your password') ?></h2>
-                        <p class="mb-7 text-md text-text-500 sm:text-center"><?= __('We will send you an email to reset your password') ?></p>
-                    </div>
-                    <div class="field email required mt-6">
-                        <label for="email_address" class="label hidden">
-                            <span><?= $escaper->escapeHtml(__('Email')) ?></span>
-                        </label>
-                        <div class="control">
-                            <input type="email"
-                                   placeholder="Email address"
-                                   name="email"
-                                   alt="email"
-                                   id="email_address"
-                                   class="input__field input__field--outline bg-bg-500 px-5 py-4"
-                                   autocomplete="<?= $isAutocompleteEnabled ? 'username' : 'off' ?>"
-                                   required
-                                   value="<?= $escaper->escapeHtmlAttr($block->getEmailValue()) ?>">
-                        </div>
+<div class="container mx-auto flex h-full items-center px-5">
+    <div class="mx-auto w-[412px] max-w-full mb-16" x-data="Authentication">
+        <header class="sm:text-center mb-7">
+            <h2 class="text-2xl mb-3 md:mb-4" tabindex="-1"><?= __('Reset your password') ?></h2>
+            <p class="mb-7 text-md text-text-500"><?= __('We will send you an email to reset your password') ?></p>
+        </header>
+
+        <form action="<?= $escaper->escapeUrl($block->getUrl('*/*/forgotpasswordpost')) ?>"
+              method="post"
+              id="<?= $escaper->escapeHtmlAttr($formId) ?>"
+              @submit.prevent="submitAuthForm('<?= $escaper->escapeJs($formId) ?>');"
+        >
+            <?= $block->getBlockHtml('formkey') ?>
+            <input type="hidden" name="formId" value="<?= $escaper->escapeHtmlAttr($formId) ?>"/>
+            <?= $block->getChildHtml('form_fields_before') ?>
+            <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
+
+            <?php if ($successMessage): ?>
+                <div class="text-green-700 -mt-3 mb-3">
+                    <span><?= $successMessage ?></span>
+                </div>
+            <?php elseif ($errorMessage['general'] ?? false): ?>
+                <div class="field-error -mt-3 mb-3">
+                    <span class="messages"><?= $escaper->escapeHtml($errorMessage['general'] ?? __('Oops! Something went wrong. Please try again.')) ?></span>
+                </div>
+            <?php endif; ?>
+
+            <div class="flex flex-col gap-3">
+                <div class="field field-reserved <?= $errorMessage ? 'field-error' : '' ?>">
+                    <label for="email_address" class="sr-only tracking-widest">
+                        <?= __('Email') ?>
+                    </label>
+                    <div>
+                        <input type="email"
+                               placeholder="Email address"
+                               name="email"
+                               alt="email"
+                               id="email_address"
+                               class="input__field input__field--outline bg-bg-500 px-5 py-4"
+                               autocomplete="<?= $isAutocompleteEnabled ? 'username' : 'off' ?>"
+                               required
+                               value="<?= $escaper->escapeHtmlAttr($block->getEmailValue()) ?>">
                     </div>
                     <?php if ($errorMessage): ?>
-                        <div class="text-red-600 mt-3">
-                            <?= $errorMessage ?>
+                        <div class="field-error mt-1">
+                            <span class="messages"><?= $errorMessage ?></span>
                         </div>
                     <?php endif; ?>
-                    <?= $block->getChildHtml('form_additional_info') ?>
-                    <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
-                </fieldset>
-                <div class="actions-toolbar">
-                    <div class="primary">
-                        <button type="submit"
-                                class="button button--filled-primary mt-7 mb-6 w-full py-4" <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>>
-                            <span><?= $escaper->escapeHtml(__('Reset My Password')) ?></span>
-                        </button>
-                    </div>
-                    <div class="w-full text-center tracking-widest">
-                        <a class="link link--primary" href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>"
-                           x-element-transition-trigger>
-                            <span><?= $escaper->escapeHtml(__('Go back')) ?></span>
-                        </a>
-                    </div>
                 </div>
-            </form>
-        </div>
+
+                <?= $block->getChildHtml('form_additional_info') ?>
+                <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
+            </div>
+
+            <div class="flex flex-col gap-6 mt-7">
+                <button class="button button--filled-primary"
+                        :class="isLoading ? 'button--disabled' : ''"
+                        :disabled="isLoading"
+                        type="submit"
+                >
+                    <?= __('Reset My Password') ?>
+                </button>
+                <div class="text-center tracking-wider">
+                    <a href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>"
+                       class="link link--primary"
+                       x-element-transition-trigger
+                    >
+                        <?= __('Go back') ?>
+                    </a>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
