--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
@@ -41,7 +41,7 @@ $errorMessage = $block->getErrorMessage();
 ?>
 
 <div class="container mx-auto flex h-full items-center px-5">
-    <div class="mx-auto w-[412px] max-w-full">
+    <div class="mx-auto w-[412px] max-w-full mb-16">
         <header class="flex items-center justify-between sm:text-center mb-7">
             <h2 class="w-full text-2xl" tabindex="-1"><?= __('Create account') ?></h2>
         </header>
