--- a/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/cart/shipping.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/cart/shipping.phtml
@@ -52,70 +52,62 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
           x-text="cartTotals.is_virtual ? `<?= __('Enter your billing address to get a tax estimate.') ?>` : `<?= __('Enter your destination to get a shipping estimate.') ?>`">
         </p>
 
-        <div
-          class="my-3 flex flex-col gap-3"
-          :class="{'md:flex-row': hasAvailableRegions()}"
-        >
-          <div class="w-full">
-            <label
+        <div class="my-3">
+          <label
               for="country_id"
               class="sr-only tracking-widest"
-            ><?= __('Country') ?></label>
-            <select
+          ><?= __('Country') ?></label>
+          <select
               name="country_id"
               placeholder="<?= __('Country') ?>"
               id="country_id"
               class="input__field"
               @change.debounce="setCountry($event.target.value)"
-            >
-              <option value=""><?= __('Country') ?></option>
-              <template
+          >
+            <option value=""><?= __('Country') ?></option>
+            <template
                 x-for="country in getSortedCountries()"
                 :key="country.id"
-              >
-                <option
+            >
+              <option
                   :value="country.id"
                   x-text="country.name"
                   :selected="cartData.address && country.id == cartData.address.countryId"
-                ></option>
-              </template>
-            </select>
-          </div>
+              ></option>
+            </template>
+          </select>
+        </div>
 
+        <div class="my-3 flex flex-col gap-3 md:flex-row">
           <template x-if="hasAvailableRegions()">
             <div class="w-full">
               <label
-                for="region_id"
-                class="sr-only tracking-widest"
+                  for="region_id"
+                  class="sr-only tracking-widest"
               ><?= __('State/Province') ?></label>
               <select
-                name="region_id"
-                placeholder="<?= __('State/Province') ?>"
-                id="region_id"
-                class="input__field"
-                @change.debounce="setRegion($event.target.value, 'select')"
+                  name="region_id"
+                  placeholder="<?= __('State/Province') ?>"
+                  id="region_id"
+                  class="input__field"
+                  @change.debounce="setRegion($event.target.value, 'select')"
               >
                 <option value=""><?= __('State/Province') ?></option>
                 <template
-                  x-for="region in getAvailableRegions()"
-                  :key="region.id"
+                    x-for="region in getAvailableRegions()"
+                    :key="region.id"
                 >
                   <option
-                    :data-code="region.code"
-                    :value="region.id"
-                    x-text="region.name"
-                    :selected="cartData.address && region.id == cartData.address.regionId"
+                      :data-code="region.code"
+                      :value="region.id"
+                      x-text="region.name"
+                      :selected="cartData.address && region.id == cartData.address.regionId"
                   ></option>
                 </template>
               </select>
             </div>
           </template>
-        </div>
 
-        <div
-          class="my-3 flex flex-col gap-3"
-          :class="{'md:flex-row': directoryData && !hasAvailableRegions()}"
-        >
           <template x-if="directoryData && !hasAvailableRegions()">
             <div class="w-full">
               <label
