INTERNAL-46; remove success message from forgotpassword.phtml since it redirects to login

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -21,7 +21,6 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
 
 $formId = 'user_forgotpassword';
 
-$successMessage = $block->getSuccessMessage();
 $errorMessage = $block->getErrorMessage();
 
 // Do not replace this with $viewModels->require(ReCaptcha::class); that might break the dependency
@@ -46,11 +45,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
             <?= $block->getChildHtml('form_fields_before') ?>
             <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
 
-            <?php if ($successMessage): ?>
-                <div class="text-green-700 -mt-3 mb-3">
-                    <span><?= $successMessage ?></span>
-                </div>
-            <?php elseif ($errorMessage['general'] ?? false): ?>
+            <?php if ($errorMessage['general'] ?? false): ?>
                 <div class="field-error -mt-3 mb-3">
                     <span class="messages"><?= $escaper->escapeHtml($errorMessage['general'] ?? __('Oops! Something went wrong. Please try again.')) ?></span>
                 </div>
