--- a/app/design/frontend/Satoshi/Hyva/Magento_Store/templates/switch/languages.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Store/templates/switch/languages.phtml
@@ -3,31 +3,38 @@ declare(strict_types=1);
 
 use Magento\Store\Block\Switcher;
 use Satoshi\Theme\Block\Template;
+use Magento\Store\ViewModel\SwitcherUrlProvider;
+use Magento\Framework\Escaper;
 
+/** @var Escaper $escaper */
 /** @var Switcher $block */
 /** @var Template $template */
+/** @var ViewModelRegistry $viewModels */
+
+/** @var SwitcherUrlProvider $switcherUrlProvider */
+$switcherUrlProvider = $viewModels->require(SwitcherUrlProvider::class);
 
 if (count($block->getStores()) > 1):
     $id = $block->getIdModifier() ? '-' . $block->getIdModifier() : '';
     $currentStoreId = $block->getCurrentStoreId();
     $currentStoreCode = $block->getCurrentStoreCode();
-    $currentLabel = $block->escapeHtml($block->getStoreName());
+    $currentLabel = $block->getStoreName();
 
-    $options = array_map(static function ($store) use ($block, $currentStoreId) {
+    $options = array_map(static function ($store) use ($currentStoreId, $switcherUrlProvider) {
         $isCurrent = $store->getId() === $currentStoreId;
 
         return [
-            'value' => $block->escapeHtml($store->getCode()),
-            'label' => $block->escapeHtml($store->getName()),
-            'on_click' => $isCurrent ? '' : "navigateAndReplaceContent('{$block->getViewModel()->getTargetStoreRedirectUrl($store)}')",
+            'value' => $store->getCode(),
+            'label' => $store->getName(),
+            'url' => $switcherUrlProvider->getTargetStoreRedirectUrl($store),
             'is_active' => $isCurrent,
         ];
     }, $block->getStores());
     ?>
 
     <?= $template->setData([
-            'id' => 'store-selector' . $block->escapeHtmlAttr($id),
-            'label' => $currentLabel,
+            'id' => 'store-selector' . $id,
+            'label' => $escaper->escapeHtml($currentLabel),
             'options' => $options,
             'placement' => 'top',
         ])->render('Magento_Theme::html/components/dropdown.phtml'); ?>
