--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/components/dropdown-option.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/components/dropdown-option.phtml
@@ -19,18 +19,18 @@ $url = $block->getData('url');
 <li>
   <a
     tabindex="0"
-    data-value="<?= $value ?>"
+    data-value="<?= $escaper->escapeHtmlAttr($value) ?>"
     class="flex cursor-pointer justify-between p-3 text-text-500<?= $isActive ? ' bg-bg-600 text-primary-600 md:cursor-not-allowed' : ' md:hover:text-primary-600' ?> gap-x-6 text-nowrap rounded-xs"
     <?php if ($url): ?>
     href="<?= $escaper->escapeUrl($url) ?>"
     <?php endif; ?>
     <?php if ($onClick): ?>
-    @click.prevent="<?= $onClick ?>"
+    @click.prevent="<?= $escaper->escapeHtmlAttr($onClick) ?>"
     <?php endif; ?>
     <?php if ($isActive): ?>
     aria-current="true"
     <?php endif; ?>
   >
-    <?= $label ?>
+    <?= /* @noEscape */ $label ?>
   </a>
 </li>
