INTERNAL-44: Implement product short description in PDP

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -52,7 +52,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 <div class="flex flex-col-reverse md:flex-col">
   <div class="animate-on-transition max-md:px-4">
     <!-- Short Description -->
-    <?php if ($shortDescription = $productViewModel->getShortDescription()): ?>
+      <?php if ($shortDescription = $product->getShortDescription()): ?>
       <div class="mb-4"><?= $shortDescription ?></div>
     <?php endif; ?>
 
