--- a/app/design/frontend/Satoshi/Hyva/Magento_Search/templates/term.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Search/templates/term.phtml
@@ -11,12 +11,14 @@ use Magento\Search\Block\Term;
 
 ?>
 <div class="content-wrapper h-full mx-auto">
-    <?= $block->getChildHtml('page.main.title') ?>
+    <div class="pt-3 pb-6">
+        <?= $block->getChildHtml('page.main.title') ?>
+    </div>
     <?php if (count($block->getTerms()) > 0): ?>
-        <div class="flex flex-wrap gap-3 mt-4">
+        <div class="flex flex-wrap gap-5 items-end">
             <?php foreach ($block->getTerms() as $term): ?>
                 <a href="<?= $escaper->escapeUrl($block->getSearchUrl($term)) ?>"
-                   class="button button--outline-secondary"
+                   class="link link--ghost"
                    style="font-size: <?= /** @noEscape */
                    ($term->getRatio() * 70 + 75) ?>%"
                 >
