--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/view.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/view.phtml
@@ -3,7 +3,7 @@
 declare(strict_types=1);
 
 use Magento\Framework\Escaper;
-use Magento\Wishlist\Block\Customer\Wishlist;
+use Satoshi\Wishlist\Block\Customer\Wishlist;
 use Magento\Wishlist\Helper\Data as WishlistHelper;
 
 // phpcs:disable Magento2.Templates.ThisInTemplate.FoundThis
